--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -34,6 +34,10 @@
             <enum name="values" value="1" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="MyRadioGroup">
+        <attr name="lineCount" format="integer" />
+    </declare-styleable>
 </resources>
 
 
